Usunąłem znaki / sprzed images co umożliwiło przeglądarce wyświetlenie zdjęć.

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       <a>
         <ul>
           <li>
-            <img src="/images/whatdowedo/whatdowedo1.jpg" alt="kodowanie" width="370" height="294">
+            <img src="images/whatdowedo/whatdowedo1.jpg" alt="kodowanie" width="370" height="294">
           </li>
           <li>
-            <img src="/images/whatdowedo/whatdowedo2.jpg" alt="stylowanie" width="370" height="294">
+            <img src="images/whatdowedo/whatdowedo2.jpg" alt="stylowanie" width="370" height="294">
           </li>
           <li>
-            <img src="/images/whatdowedo/whatdowedo3.jpg" alt="projektowanie" width="370" height="294">
+            <img src="images/whatdowedo/whatdowedo3.jpg" alt="projektowanie" width="370" height="294">
           </li>
         </ul>
       </a>
@@ -85,26 +85,26 @@
 
       <ul>
         <li>
-          <img src="/images/ourteam/team1.jpg" alt="product designer John Doe" width="270" height="260">
-
+          <img src="images/ourteam/team1.jpg" alt="product designer John Doe" width="270" height="260">
 
           <h3>John Doe</h3>
           <p>Product Designer</p>
         </li>
 
-        <li><img src="/images/ourteam/team2.jpg" alt="frontend developer John Doe" width="270" height="260">
+        <li>
+          <img src="images/ourteam/team2.jpg" alt="frontend developer John Doe" width="270" height="260">
 
           <h3>John Doe</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="/images/ourteam/team3.jpg" alt="marketing John Doe" width="270" height="260">
+          <img src="images/ourteam/team3.jpg" alt="marketing John Doe" width="270" height="260">
 
           <h3>John Doe</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="/images/ourteam/team4.jpg" alt="UI Designer John Doe" width="270" height="260">
+          <img src="images/ourteam/team4.jpg" alt="UI Designer John Doe" width="270" height="260">
 
           <h3>John Doe</h3>
           <p>UI Designer</p>
