--- a/index.html
+++ b/index.html
@@ -29,36 +29,45 @@
   <main>
     <!--Opisy... czegoś-->
     <div>
+
       <ul>
-
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+            et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+            et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+            et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
+            et
             malesuada
           </p>
         </li>
       </ul>
+
     </div>
 
     <section>
