Revert "Drobna zmiana, dodanie <h4> do loremów."
This reverts commit 285bc630cd01b0e07b66041997acdf3a73c554eb.

--- a/index.html
+++ b/index.html
@@ -29,45 +29,36 @@
   <main>
     <!--Opisy... czegoś-->
     <div>
-
       <ul>
-        <li>
-          <h4>Lorem Ipsum</h4>
+
+        <li>Lorem Ipsum
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-            et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>
-          <h4>Lorem Ipsum</h4>
+        <li>Lorem Ipsum
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-            et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>
-          <h4>Lorem Ipsum</h4>
+        <li>Lorem Ipsum
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-            et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>
-          <h4>Lorem Ipsum</h4>
+        <li>Lorem Ipsum
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum
-            et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
       </ul>
-
     </div>
 
     <section>
