--- a/index.html
+++ b/index.html
@@ -31,28 +31,32 @@
     <div>
       <ul>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
           </p>
         </li>
 
-        <li>Lorem Ipsum
+        <li>
+          <h4>Lorem Ipsum</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada
